--- a/html/product_detail.html
+++ b/html/product_detail.html
@@ -100,13 +100,13 @@
                                         <div class="img-wrap">
                                             <img src="../assets/images/sub/product_img02.png" alt="product img" />
                                         </div>
-                                        <strong>Internal CN..Holders</strong>
+                                        <strong>Internal CN..Holders Internal CN..Holders</strong>
                                     </li>
                                     <li>
                                         <div class="img-wrap">
                                             <img src="../assets/images/sub/product_img02.png" alt="product img" />
                                         </div>
-                                        <strong>Internal CN..Holders</strong>
+                                        <strong>Internal CN..Holders Internal CN..Holders Internal CN..Holders</strong>
                                     </li>
                                     <li>
                                         <div class="img-wrap">
